--- a/package.json
+++ b/package.json
@@ -14,6 +14,16 @@
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "resolve-url-loader": "^3.1.0",
+        "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-react": "^7.18.6",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
+        "react-dom": "^18.2.0",
+        "react-refresh": "^0.10.0"
     }
 }
