fixing setup for development react + laravel + tailwind css

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/js/app.49bc6b5cb3b56e0b80ce.hot-update.js": "/js/app.49bc6b5cb3b56e0b80ce.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
