--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "development": "mix",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000",
+        "hot": "mix watch --hot",
+        "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^9.8.8",
+        "autoprefixer": "^10.4.14",
         "axios": "^0.19",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^7.0.39",
+        "postcss": "^8.4.23",
         "resolve-url-loader": "^3.1.0",
-        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-        "vue-template-compiler": "^2.7.14"
+        "tailwindcss": "^3.3.2",
+        "vue-template-compiler": "^2.7.14",
+        "webpack-livereload-plugin": "^1.2.0"
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-react": "^7.18.6",
+        "@heroicons/react": "^2.0.18",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
-        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
-        "react-dom": "^18.2.0",
-        "react-refresh": "^0.10.0"
+        "@material-tailwind/react": "^2.0.1",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "prop-types": "^15.8.1",
+        "react-dom": "^18.2.0"
     }
 }
