--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "inertiajs/inertia-laravel": "^0.6.9",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-permission": "^5.10",
         "tightenco/ziggy": "^1.6"
     },
     "require-dev": {
