--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/progress": "^0.2.7",
         "@material-tailwind/react": "^2.0.1",
+        "apexcharts": "^3.40.0",
         "browser-sync-webpack-plugin": "^2.3.0",
         "prop-types": "^15.8.1",
+        "react-apexcharts": "^1.4.0",
         "react-dom": "^18.2.0"
     }
 }
