--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "browser-sync-webpack-plugin": "^2.3.0",
         "prop-types": "^15.8.1",
         "react-apexcharts": "^1.4.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-toastify": "^9.1.3"
     }
 }
