--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.0-rc.0",
         "autoprefixer": "^10.4.14",
-        "axios": "^0.19",
+        "axios": "^1.4.0",
+        "browser-sync": "^2.29.3",
         "cross-env": "^7.0",
         "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.4.23",
+        "react-refresh": "^0.14.0",
         "resolve-url-loader": "^3.1.0",
         "tailwindcss": "^3.3.2",
         "vue-template-compiler": "^2.7.14",
